--- a/src/Components/General/generalStyle.module.css
+++ b/src/Components/General/generalStyle.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap; /* Permite que los elementos se adapten en pantallas pequeñas */
+  align-items: flex-start; /* Alinea elementos arriba */
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 20px;
@@ -12,28 +13,29 @@
 .image {
   flex: 1;
   margin-right: 20px;
-  /*min-width: 600px;*/
+  max-width: 50%;
 }
 
 .image img {
   width: 100%;
-  max-width: 800px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.section_right{
+.sectionRight {
+  flex: 1;
   display: flex;
   flex-direction: column;
+  gap: 20px; /* Espaciado entre los bloques de texto */
+  max-width: 50%;
 }
 
 .text {
-  flex: 1;
   background-color: #f9f5e7;
   padding: 20px;
   border-radius: 8px;
-  margin-bottom: 50px;
-  max-width: 600px;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
 .text h3 {
@@ -44,4 +46,21 @@
 .text p {
   margin: 5px 0;
   color: #666;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column; /* Apila los elementos en pantallas pequeñas */
+    align-items: center;
+    gap:20px;
+  }
+
+  .image,
+  .sectionRight {
+    max-width: 100%;
+  }
+
+  .image {
+    margin-right: 0;
+  }
 }
