--- a/src/Components/Wrapper/wrapperStyle.module.css
+++ b/src/Components/Wrapper/wrapperStyle.module.css
@@ -1,62 +1,60 @@
+/* CSS */
 .wrapper {
-    margin: 50px auto;
-    max-width: 1200px; 
+    margin: 20px auto;
+    max-width: 100%;
     padding: 20px;
     box-sizing: border-box;
-}
-
-.selector {
+  }
+  
+  .selectorSection {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+    margin-bottom: 30px;
+  }
+  
+  .selectorContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
-    margin-bottom: 30px; 
-}
-
-.selectorContainer {
-    display: flex;
-    gap: 15px; 
-    align-items: center;
-    width: 100%;
-}
-
-.basicSingle {
+    gap: 10px;
     width: 100%;
     max-width: 350px;
+  }
+  
+  .basicSingle {
+    width: 100%;
     font-size: 14px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 5px;
+    padding: 0px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 5px;
-}
-
-.selectLabel {
-    display: flex;
-    align-items: center;
+  }
+  
+  .selectLabel {
     font-weight: bold;
     color: #333;
-}
-
-.ant-picker {
+  }
+  
+  .antPicker {
     width: 100%;
-    max-width: 350px;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.ant-picker:hover {
+  }
+  
+  .antPicker:hover {
     border-color: #1890ff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.containerCharts {
+  }
+  
+  .containerCharts {
     display: flex;
     flex-direction: column;
-    margin: 30px auto; /* Separación entre gráficos */
+    margin: 30px auto;
     align-items: center;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -64,5 +62,24 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     gap: 20px;
-}
+  }
+  
+  @media (max-width: 768px) {
+    .wrapper{
+      max-width: 100%;
+    }
 
+    .selectorSection {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .selectorContainer {
+      max-width: 100%;
+    }
+  
+    .containerCharts {
+      width: 95%;
+    }
+  }
+  
