--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     align-items: center;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #2b5fa8;
     border-radius: 8px;
     background-color: #f9f9f9;
     margin: 20px 20px; 
@@ -40,7 +40,7 @@
 }
 
 .dataButton {
-    background-color: #444;
+    background-color: #0e3c78;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -59,13 +59,12 @@
 }
 
 .dataButton:hover {
-    background-color: #666;
+    background-color: #1b487f;
 }
 
 .icon {
     font-size: 18px;
 }
-
 
 @media (max-width: 768px) {
     .selectorContainer {
@@ -77,7 +76,6 @@
         padding: 10px;
         margin: auto;
     }
-
 
     .dataButton {
         width: 100%;
