--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');
-
 .selectorContainer {
     display: flex;
     flex-wrap: wrap;
@@ -38,7 +36,7 @@
     font-weight: bold;
     color: #000;
     letter-spacing: 2px;
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Nasalization', sans-serif;
   }
 
 
